モーダル完成。地道な作業で

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 	<main>
 		<!-- hero-header -->
 		<section id="hero" class="ly_cont ly_cont_hero">
+
 			<div class="ly_hero_heading">
 				<p class="bl_hero_subHeading textAnimate">ウェブサイト制作・開発</p>
 				<h1 class="bl_hero_heading">
@@ -101,6 +102,9 @@
 
 					</div><!-- /.animate-title -->
 				</h1>
+				<figure id="faceBall" class="faceBall">
+					<img src="./images/icon.png" alt="">
+				</figure>
 				<p class="bl_hero_description textAnimate">
 					ていねいなコミュニケーションをとり、依頼者の状況、要望を的確にとらえ、<br>
 					最適なウェブサイト、施策を提案・構築します。
@@ -122,10 +126,14 @@
 				</div>
 				<div class="bl_description__white">
 					<p>
-						なんのためにウェブサイトをつくるのでしょうか。作りたいと思う人それぞれに、目的があるはずです。目的に応じた、ホームページ制作、運用、施策を提案します。
+						なんのためにウェブサイトをつくるのでしょうか。作りたいと思う人それぞれに、目的があるはずです。
 					</p>
 					<p>
-						Web技術に明るくなくても大丈夫です。教員経験のあるそんほんすは、あなたの意識にあるキーワードから、適切に課題を導き出し、対応策をわかりやすくご説明いたします。
+						お店の売上をあげたい。自社のことを知らせたい。新規のお客様に来てほしい。などなど。あなたの状況や目的に最適な、ホームページ制作、運用、ウェブを使った施策を提案します。
+					</p>
+					<p>
+						Web技術に明るくなくても大丈夫です。教員経験のあるそんほんすは、あなたの意識にあるキーワードから、適切に課題を導き出し、対応策をわかりやすくご説明いたします。あなたのお店・会社のウェブ担当のつもりでご相談ください。
+					</p>
 				</div><!-- /.bl-description -->
 			</div>
 
@@ -141,12 +149,10 @@
 						<div class="bl_card_description">
 							<p>お客様のビジネスの状況をききとり、ホームページ制作、改修、保守運用など行います。ホームページを開設するための方法もいろいろあります。それぞれのやり方のメリット、デメリットを考慮に入れて、提案をいたします。
 							</p>
-							<p>
-								【ホームページ制作】　15万円〜<br>
-								【保守運用】　１５０００円／月
 
-
-							</p>
+							ホームページ制作　オリジナル２０万円〜　テンプレート５万円〜　<br>
+							保守運用　１．５万円／月〜 <br>
+							改修、リニューアル等　都度お見積り
 						</div><!-- /.bl_card_description -->
 					</div>
 				</div>
@@ -155,9 +161,15 @@
 						<img src="./images/computer.png" alt="">
 					</figure><!-- /.bl_card_image -->
 					<div class="bl_card_textWrapper">
-						<h3>SEO対策、SNS運用代行、コンサルティング</h3>
+						<h3>MEO/SEO対策、SNS運用代行、コンサルティング</h3>
 						<div class="bl_card_description">
-							<p>集客のお手伝いをいたします。サイトとの連動など総合的に状況を判断して、効果的な施策を提案、代行等いたします。代表のそんほんすが対応するので、フットワーク軽く様々なご相談をお受けいたします。</p>
+							<p>
+								LINE、インスタなどのSNS、SEO,MEOなどの検索への対策など、ウェブ技術を活用した集客のお手伝いをいたします。サイトとの連動など総合的に状況を判断して、効果的な施策を提案、代行等いたします。ときには、オフライン施策も含めてのご提案もいたします。代表のそんほんすが対応するので、フットワーク軽く様々なご相談をお受けいたします。
+							</p>
+
+							SNSコンサル　２万円／月〜<br>
+							SNS運用代行 ３万円／月〜
+
 						</div><!-- /.bl_card_description -->
 					</div>
 				</div>
@@ -167,35 +179,224 @@
 
 		</section><!-- /.services -->
 
-		<!-- priceBlock -->
+	<!-- worksBlock -->
 
-		<section class="ly_cont">
-			<div class="ly_intro">
-				<div class="bl_heading">
-					<h2 class="el_heading">
-						料金
-					</h2>
-				</div><!-- /.bl_heading -->
+	<section id="works" class="ly_cont">
+		<div class="ly_intro">
+			<div class="bl_heading">
+				<h2 id="work-heading">実績</h2>
+			</div><!-- /.bl_heading -->
+			<div class="bl_description__white">
+				<p>
+					これまでの制作実績を掲載しています。案件として受けたものでも、公開ができないものもありますので、気になる方はお問い合わせください。
+				</p>
+			</div><!-- /.bl_description -->
+		</div>
 
-				<div class="bl_description">
-					<p>
-						以下に料金表を示します。基本的な総額を表示しています。
-						サブスクリプションによる契約など、お客様の状況に応じた契約が可能ですので、
-						お気軽にご相談ください。
-					</p>
-				</div><!-- /.bl_description -->
-				<div class="bl_price_content">
-					ウェブサイト制作　１５万円〜
-					一般的なウェブサイト、WordPress、JAMstackなどの技術やページ数などによって変動いたします。まずはご相談ください。
-					ウェブサイトの保守運用　１５０００円／月〜
-					SNS運用代行・SNS運用コンサルティング
-					それぞれ、お客様の業種や状況に合わせて、ご提案いたします。１００００円／月〜
-					　
+		<div id="over-lay" class="over-lay hidden">
+		</div><!-- /.over-lay -->
+
+		<ul id="work-list" class="bl_work_wrapper">
+
+			<li id="techmeets" class="bl_work hp_shadow">
+				<div class="bl_work_inner">
+					<div class="bl_work_info">
+						<div class="bl_work_title">
+							TECHMEETS
+						</div><!-- /.bl_work_title -->
+						<div class="bl_work_desc_wrapper">
+							<p class="bl_work_desc">
+								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+							</p><!-- /.bl_work_desc -->
+							<ul class="bl_work_linkWrapper">
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fab fa-github"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-external-link-alt"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-image"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+							</ul><!-- /.bl_work_linkWrapper -->
+						</div><!-- /.bl_work_info -->
+					</div><!-- /.-only -->
+					<figure class="bl_work_img">
+						<img src="./images/works/01-techmeets.jpg" alt="">
+					</figure><!-- /.bl_work_img -->
+					<div id="btn_close" class="btn_close">
+						<button>閉じるTECH</button>
+					</div><!-- /.btn_close -->
+				</div><!-- /.bl_work_inner -->
+			</li>
+
+			<li id="study-link01" class="bl_work hp_shadow ">
+				<div class="bl_work_inner">
+					<div class="bl_work_info ">
+						<div class="bl_work_title">
+							学習に使えるリンク集
+						</div><!-- /.bl_work_title -->
+						<div class="bl_work_desc_wrapper">
+							<p class="bl_work_desc">
+								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+							</p><!-- /.bl_work_desc -->
+							<ul class="bl_work_linkWrapper">
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fab fa-github"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-external-link-alt"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-image"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+							</ul><!-- /.bl_work_linkWrapper -->
+						</div><!-- /.bl_work_info -->
+					</div><!-- /.-only -->
+					<figure class="bl_work_img ">
+						<img src="./images/works/02-takamina-link.jpg" alt="">
+					</figure><!-- /.bl_work_img -->
+					<div id="btn_close" class="btn_close">
+						<button>閉じるST1</button>
+					</div><!-- /.btn_close -->
+				</div><!-- /.bl_work_inner -->
+			</li>
+
+			<li id="study-link02" class="bl_work hp_shadow ">
+				<div class="bl_work_inner">
+					<div class="bl_work_info ">
+						<div class="bl_work_title">
+							学習につかえるリンク集２
+						</div><!-- /.bl_work_title -->
+						<div class="bl_work_desc_wrapper">
+							<p class="bl_work_desc">
+								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+							</p><!-- /.bl_work_desc -->
+							<ul class="bl_work_linkWrapper">
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fab fa-github"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-external-link-alt"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-image"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+							</ul><!-- /.bl_work_linkWrapper -->
+						</div><!-- /.bl_work_info -->
+					</div><!-- /.-only -->
+					<figure class="bl_work_img">
+						<img src="./images/works/03-takamina-link3.jpg" alt="">
+					</figure><!-- /.bl_work_img -->
+					<div id="btn_close" class="btn_close">
+						<button>閉じるST2</button>
+					</div><!-- /.btn_close -->
+				</div><!-- /.bl_work_inner -->
+			</li>
+
+			<li id="bochi" class="bl_work hp_shadow ">
+				<div class="bl_work_inner">
+					<div class="bl_work_info ">
+						<div class="bl_work_title">
+							ぼちぼちブログ
+						</div><!-- /.bl_work_title -->
+						<div class="bl_work_desc_wrapper">
+							<p class="bl_work_desc">
+								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+							</p><!-- /.bl_work_desc -->
+							<ul class="bl_work_linkWrapper">
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fab fa-github"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-external-link-alt"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-image"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+							</ul><!-- /.bl_work_linkWrapper -->
+						</div><!-- /.bl_work_info -->
+					</div><!-- /.-only -->
+					<figure class="bl_work_img">
+						<img src="./images/works/04-bochi.jpg" alt="">
+					</figure><!-- /.bl_work_img -->
+					<div id="btn_close" class="btn_close">
+						<button>閉じるBOCHI</button>
+					</div><!-- /.btn_close -->
+				</div><!-- /.bl_work_inner -->
+			</li>
+
+			<li id="ytu" class="bl_work hp_shadow">
+				<div class="bl_work_inner">
+					<div class="bl_work_info">
+						<div class="bl_work_title">
+							八尾市教職員組合
+						</div><!-- /.bl_work_title -->
+						<div class="bl_work_desc_wrapper">
+							<p class="bl_work_desc">
+								TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
+							</p><!-- /.bl_work_desc -->
+							<ul class="bl_work_linkWrapper">
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fab fa-github"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-external-link-alt"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+								<li class="el_work_linkItem">
+									<a href="">
+										<i class="fas fa-image"></i>
+									</a>
+								</li><!-- /.el_work_linkItem -->
+							</ul><!-- /.bl_work_linkWrapper -->
+						</div><!-- /.bl_work_info -->
+					</div><!-- /.-only -->
+					<figure class="bl_work_img">
+						<img src="./images/works/05-ytu.jpg" alt="">
+					</figure><!-- /.bl_work_img -->
+					<div id="btn_close" class="btn_close">
+						<button>
+							閉じるytu
+						</button><!-- /.btn_close -->
+					</div>
+				</div><!-- /.bl_work_inner -->
+			</li>
 
 
-				</div><!-- /.bl_price_content -->
-			</div>
-		</section><!-- /.price -->
+
+		</ul>
+
+
+	</section><!-- /.works -->
+
 
 		<!-- skillsBlock -->
 
@@ -208,7 +409,7 @@
 
 				<div class="bl_description__white">
 					<p>
-						スキルのイントロダクション
+						WEBSONで提供できるスキルを紹介します。現在も、新しい技術についても勉強しています。
 					</p>
 				</div><!-- /.bl_description -->
 			</div>
@@ -307,223 +508,20 @@
 
 		</section><!-- /.skills -->
 
-		<!-- worksBlock -->
 
-		<section id="works" class="ly_cont">
-			<div class="ly_intro">
-				<div class="bl_heading">
-					<h2 id="work-heading">実績</h2>
-				</div><!-- /.bl_heading -->
-				<div class="bl_description">
-					<p>
-						これまでの制作実績を掲載しています。案件として受けたものでも、公開ができないものもありますので、気になる方はお問い合わせください。
-					</p>
-				</div><!-- /.bl_description -->
-			</div>
-
-			<div id="over-lay" class="over-lay hidden">
-			</div><!-- /.over-lay -->
-
-			<ul id="work-list" class="bl_work_wrapper">
-
-				<li id="techmeets" class="bl_work hp_shadow">
-					<div class="bl_work_inner">
-						<div class="bl_work_info">
-							<div class="bl_work_title">
-								TECHMEETS
-							</div><!-- /.bl_work_title -->
-							<div class="bl_work_desc_wrapper">
-								<p class="bl_work_desc">
-									TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
-								</p><!-- /.bl_work_desc -->
-								<ul class="bl_work_linkWrapper">
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fab fa-github"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fas fa-external-link-alt"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fas fa-image"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-								</ul><!-- /.bl_work_linkWrapper -->
-							</div><!-- /.bl_work_info -->
-						</div><!-- /.-only -->
-						<figure class="bl_work_img">
-							<img src="./images/works/01-techmeets.jpg" alt="">
-						</figure><!-- /.bl_work_img -->
-						<div class="btn_close">
-							<button>閉じる</button>
-						</div><!-- /.btn_close -->
-					</div><!-- /.bl_work_inner -->
-				</li>
-
-				<li id="study-link01" class="bl_work hp_shadow ">
-					<div class="bl_work_inner">
-						<div class="bl_work_info ">
-							<div class="bl_work_title">
-								学習に使えるリンク集
-							</div><!-- /.bl_work_title -->
-							<div class="bl_work_desc_wrapper">
-								<p class="bl_work_desc">
-									TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
-								</p><!-- /.bl_work_desc -->
-								<ul class="bl_work_linkWrapper">
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fab fa-github"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fas fa-external-link-alt"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fas fa-image"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-								</ul><!-- /.bl_work_linkWrapper -->
-							</div><!-- /.bl_work_info -->
-						</div><!-- /.-only -->
-						<figure class="bl_work_img ">
-							<img src="./images/works/02-takamina-link.jpg" alt="">
-						</figure><!-- /.bl_work_img -->
-					</div><!-- /.bl_work_inner -->
-				</li>
-
-				<li id="study-link02" class="bl_work hp_shadow ">
-					<div class="bl_work_inner">
-						<div class="bl_work_info ">
-							<div class="bl_work_title">
-								学習につかえるリンク集２
-							</div><!-- /.bl_work_title -->
-							<div class="bl_work_desc_wrapper">
-								<p class="bl_work_desc">
-									TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
-								</p><!-- /.bl_work_desc -->
-								<ul class="bl_work_linkWrapper">
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fab fa-github"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fas fa-external-link-alt"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fas fa-image"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-								</ul><!-- /.bl_work_linkWrapper -->
-							</div><!-- /.bl_work_info -->
-						</div><!-- /.-only -->
-						<figure class="bl_work_img">
-							<img src="./images/works/03-takamina-link3.jpg" alt="">
-						</figure><!-- /.bl_work_img -->
-					</div><!-- /.bl_work_inner -->
-				</li>
-
-				<li id="bochi" class="bl_work hp_shadow ">
-					<div class="bl_work_inner">
-						<div class="bl_work_info ">
-							<div class="bl_work_title">
-								ぼちぼちブログ
-							</div><!-- /.bl_work_title -->
-							<div class="bl_work_desc_wrapper">
-								<p class="bl_work_desc">
-									TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
-								</p><!-- /.bl_work_desc -->
-								<ul class="bl_work_linkWrapper">
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fab fa-github"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fas fa-external-link-alt"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fas fa-image"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-								</ul><!-- /.bl_work_linkWrapper -->
-							</div><!-- /.bl_work_info -->
-						</div><!-- /.-only -->
-						<figure class="bl_work_img">
-							<img src="./images/works/04-bochi.jpg" alt="">
-						</figure><!-- /.bl_work_img -->
-					</div><!-- /.bl_work_inner -->
-				</li>
-
-				<li id="ytu" class="bl_work hp_shadow">
-					<div class="bl_work_inner">
-						<div class="bl_work_info">
-							<div class="bl_work_title">
-								八尾市教職員組合
-							</div><!-- /.bl_work_title -->
-							<div class="bl_work_desc_wrapper">
-								<p class="bl_work_desc">
-									TECHMEETSさんにいただいた画像カンプからコーディングしました。レスポンシブにも対応しています。
-								</p><!-- /.bl_work_desc -->
-								<ul class="bl_work_linkWrapper">
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fab fa-github"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fas fa-external-link-alt"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-									<li class="el_work_linkItem">
-										<a href="">
-											<i class="fas fa-image"></i>
-										</a>
-									</li><!-- /.el_work_linkItem -->
-								</ul><!-- /.bl_work_linkWrapper -->
-							</div><!-- /.bl_work_info -->
-						</div><!-- /.-only -->
-						<figure class="bl_work_img">
-							<img src="./images/works/05-ytu.jpg" alt="">
-						</figure><!-- /.bl_work_img -->
-					</div><!-- /.bl_work_inner -->
-				</li>
-
-
-
-			</ul>
-
-
-		</section><!-- /.works -->
-
-		<section class="ly_cont ly_cont_bgBlue">
+		<section class="ly_cont">
 			<div class="ly_intro">
 
 				<div class="bl_card">
 
 					<bl_card_textWrapper>
-						<h3>私について</h3>
+						<h3>代表　そんほんすについて</h3>
 						<div class="bl_card_description">
 							<p>
 								２０１９年春頃から本格的にプログラミングやウェブ制作の学習にとりくみはじめました。教員経験を通して培ってきたコミュニケーション力や課題解決力をウェブ制作事業によって社会に還元したいという思いが募り、現在副業でウェブ制作・開発にとりくんでいます。
 
 							</p><!-- /.description -->
-							<a class="el_link_white" href="#">もっと読む >>></a>
+							<!-- <a class="el_link_white" href="#">もっと読む >>></a> -->
 						</div><!-- /.bl_card_description -->
 					</bl_card_textWrapper>
 					<figure class="bl_card_image bl_card_image_about">
@@ -541,16 +539,23 @@
 
 		</section><!-- /.about -->
 
-		<section class="ly_cont">
+		<section class="ly_cont ly_cont_bgBlue">
 			<h2 class="bl_heading contact__heading">コンタクト</h2>
+			<form>
+				<input name="name" type="text" class="feedback-input" placeholder="Name" />
+				<input name="email" type="text" class="feedback-input" placeholder="Email" />
+				<textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+				<input type="submit" value="SUBMIT" />
+			</form>
 
 		</section><!-- /.contact -->
 	</main>
-	<footer class="ly_cont ly_cont_bgBlue">
+	<footer class="ly_cont">
 		<div class="footer">
+			<img style="width: 100px;" src="./images/WEBSON.png" alt="">
 			<section class="info">
 				代表　そんほんす・孫弘樹
-				mail
+
 			</section><!-- /.info -->
 			<section class="sns">
 
