だいたいできた。

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
 		})(document);
 	</script>
-	<title>WEBSON | 大阪のウェブ制作フリーランス</title>
+	<title>WEBSON(ウェブソン) | 大阪のウェブ制作フリーランス</title>
 </head>
 
 <body>
@@ -41,37 +41,33 @@
 			<nav>
 				<ul class="ly_headerNav bl_headerNav hp_shadow" id="header-nav">
 					<li class="l_headerNav_item">
-						<a class="bl_headerNav_link" href="#">
+						<a class="bl_headerNav_link" href="#hero">
 							ホーム
 						</a>
 					</li><!-- /.bl_headerNav_item -->
 					<li class="bl_headerNav_item">
-						<a class="bl_headerNav_link" href="#">
+						<a class="bl_headerNav_link" href="#services">
 							サービス
 						</a>
 					</li><!-- /.bl_headerNav_item -->
 					<li class="bl_headerNav_item">
-						<a class="bl_headerNav_link" href="#">
-							料金
+						<a class="bl_headerNav_link" href="#works">
+							実績
 						</a>
 					</li><!-- /.bl_headerNav_item -->
+
 					<li class="bl_headerNav_item">
-						<a class="bl_headerNav_link" href="#">
+						<a class="bl_headerNav_link" href="#skills">
 							スキル
 						</a>
 					</li><!-- /.bl_headerNav_item -->
 					<li class="bl_headerNav_item">
-						<a class="bl_headerNav_link" href="#">
-							実績
-						</a>
-					</li><!-- /.bl_headerNav_item -->
-					<li class="bl_headerNav_item">
-						<a class="bl_headerNav_link" href="#">
+						<a class="bl_headerNav_link" href="#about">
 							WEBSONについて
 						</a>
 					</li><!-- /.bl_headerNav_item -->
 					<li class="bl_headerNav_item">
-						<a class="bl_headerNav_link" href="#">
+						<a class="bl_headerNav_link" href="#contact">
 							お問い合わせ
 						</a>
 					</li><!-- /.bl_headerNav_item -->
@@ -102,9 +98,10 @@
 
 					</div><!-- /.animate-title -->
 				</h1>
-				<figure id="faceBall" class="faceBall">
+				<p id="phonetic" class="bl_hero_phonetic">ウェブソン</p><!-- /.phonetic -->
+				<!-- <figure id="faceBall" class="faceBall">
 					<img src="./images/icon.png" alt="">
-				</figure>
+				</figure> -->
 				<p class="bl_hero_description textAnimate">
 					ていねいなコミュニケーションをとり、依頼者の状況、要望を的確にとらえ、<br>
 					最適なウェブサイト、施策を提案・構築します。
@@ -150,9 +147,37 @@
 							<p>お客様のビジネスの状況をききとり、ホームページ制作、改修、保守運用など行います。ホームページを開設するための方法もいろいろあります。それぞれのやり方のメリット、デメリットを考慮に入れて、提案をいたします。
 							</p>
 
-							ホームページ制作　オリジナル２０万円〜　テンプレート５万円〜　<br>
-							保守運用　１．５万円／月〜 <br>
-							改修、リニューアル等　都度お見積り
+							<table class="price-table">
+								<tr>
+										<td>ホームページ制作<br>オリジナルデザイン</td>
+										<td>
+											20万円〜
+										</td>
+								</tr>
+								<tr>
+										<td>ホームページ制作<br>テンプレート</td>
+										<td>
+											5万円〜
+										</td>
+								</tr>
+								<tr>
+									<td>
+										保守運用
+									</td>
+									<td>
+										1.5万円／月〜
+									</td>
+								</tr>
+								<tr>
+									<td>
+										改修、リニューアル等
+									</td>
+									<td>
+										都度お見積り
+									</td>
+								</tr>
+							</table>
+
 						</div><!-- /.bl_card_description -->
 					</div>
 				</div>
@@ -166,10 +191,20 @@
 							<p>
 								LINE、インスタなどのSNS、SEO,MEOなどの検索への対策など、ウェブ技術を活用した集客のお手伝いをいたします。サイトとの連動など総合的に状況を判断して、効果的な施策を提案、代行等いたします。ときには、オフライン施策も含めてのご提案もいたします。代表のそんほんすが対応するので、フットワーク軽く様々なご相談をお受けいたします。
 							</p>
-
-							SNSコンサル　２万円／月〜<br>
-							SNS運用代行 ３万円／月〜
-
+							<table class="price-table">
+								<tr>
+									<td>MEO/SEO対策</td>
+									<td>1万円／月〜</td>
+								</tr>
+								<tr>
+									<td>SNSコンサル</td>
+									<td>2万円／月〜</td>
+								</tr>
+								<tr>
+									<td>SNS運用代行</td>
+									<td>3万円／月〜</td>
+								</tr>
+							</table>
 						</div><!-- /.bl_card_description -->
 					</div>
 				</div>
@@ -231,7 +266,7 @@
 						<img src="./images/works/01-techmeets.jpg" alt="">
 					</figure><!-- /.bl_work_img -->
 					<div id="btn_close" class="btn_close">
-						<button>閉じるTECH</button>
+						<button>閉じる</button>
 					</div><!-- /.btn_close -->
 				</div><!-- /.bl_work_inner -->
 			</li>
@@ -269,7 +304,7 @@
 						<img src="./images/works/02-takamina-link.jpg" alt="">
 					</figure><!-- /.bl_work_img -->
 					<div id="btn_close" class="btn_close">
-						<button>閉じるST1</button>
+						<button>閉じる</button>
 					</div><!-- /.btn_close -->
 				</div><!-- /.bl_work_inner -->
 			</li>
@@ -307,7 +342,7 @@
 						<img src="./images/works/03-takamina-link3.jpg" alt="">
 					</figure><!-- /.bl_work_img -->
 					<div id="btn_close" class="btn_close">
-						<button>閉じるST2</button>
+						<button>閉じる</button>
 					</div><!-- /.btn_close -->
 				</div><!-- /.bl_work_inner -->
 			</li>
@@ -345,7 +380,7 @@
 						<img src="./images/works/04-bochi.jpg" alt="">
 					</figure><!-- /.bl_work_img -->
 					<div id="btn_close" class="btn_close">
-						<button>閉じるBOCHI</button>
+						<button>閉じる</button>
 					</div><!-- /.btn_close -->
 				</div><!-- /.bl_work_inner -->
 			</li>
@@ -384,7 +419,7 @@
 					</figure><!-- /.bl_work_img -->
 					<div id="btn_close" class="btn_close">
 						<button>
-							閉じるytu
+							閉じる
 						</button><!-- /.btn_close -->
 					</div>
 				</div><!-- /.bl_work_inner -->
@@ -490,7 +525,7 @@
 
 				<li class="bl_article">
 					<figure class="el_article_image">
-						<img src="./images/skills/gatsby.png" alt="">
+						<img src="./images/skills/wbm.png" alt="">
 					</figure><!-- /.article_image -->
 					<div class="bl_skills_txtWrapper">
 						<h3 class="el_skills_itemHeading">
@@ -509,7 +544,7 @@
 		</section><!-- /.skills -->
 
 
-		<section class="ly_cont">
+		<section class="ly_cont" id="about">
 			<div class="ly_intro">
 
 				<div class="bl_card">
@@ -539,7 +574,7 @@
 
 		</section><!-- /.about -->
 
-		<section class="ly_cont ly_cont_bgBlue">
+		<section id="contact" class="ly_cont ly_cont_bgBlue">
 			<h2 class="bl_heading contact__heading">コンタクト</h2>
 			<form>
 				<input name="name" type="text" class="feedback-input" placeholder="Name" />
@@ -554,7 +589,7 @@
 		<div class="footer">
 			<img style="width: 100px;" src="./images/WEBSON.png" alt="">
 			<section class="info">
-				代表　そんほんす・孫弘樹
+				© Copyright 2021 WEBSON All rights reserved.
 
 			</section><!-- /.info -->
 			<section class="sns">
